<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_coordinator_layout"
    android:background="@drawable/skyline"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityInformation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activity_info_summer_icon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:contentDescription="@string/app_name"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:background="@color/very_light_blue"
                        android:src="@drawable/ic_wb_sunny_black_24dp"
                        android:tint="@color/colorAccent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_info_summer_title"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/Summer_period"
                        app:layout_constraintEnd_toStartOf="@id/activity_info_summer_check_image_view"
                        app:layout_constraintStart_toEndOf="@id/activity_info_summer_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/activity_info_summer_check_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/Summer_period"
                        android:src="@drawable/ic_check_black_24dp"
                        android:tint="@color/pharmacy_green"
                        app:layout_constraintBottom_toBottomOf="@+id/activity_info_summer_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/activity_info_summer_title" />

                    <TextView
                        android:id="@+id/activity_info_summer_dates"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/summer_dates"
                        app:layout_constraintBottom_toBottomOf="@id/activity_info_summer_icon"
                        app:layout_constraintEnd_toEndOf="@id/activity_info_summer_title"
                        app:layout_constraintStart_toEndOf="@id/activity_info_summer_icon"
                        app:layout_constraintTop_toBottomOf="@id/activity_info_summer_title" />

                    <TextView
                        android:id="@+id/activity_info_summer_hours"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/source_code_pro_regular"
                        android:text="@string/summer_schedule"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/activity_info_summer_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activity_info_winter_icon"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_wb_cloudy_black_24dp"
                        android:tint="@color/white"
                        android:background="@color/very_light_blue"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_info_winter_title"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/Winter_period"
                        app:layout_constraintEnd_toStartOf="@id/activity_info_winter_check_image_view"
                        app:layout_constraintStart_toEndOf="@id/activity_info_winter_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/activity_info_winter_check_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/Winter_period"
                        android:src="@drawable/ic_check_black_24dp"
                        android:tint="@color/pharmacy_green"
                        app:layout_constraintBottom_toBottomOf="@+id/activity_info_winter_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/activity_info_winter_title" />

                    <TextView
                        android:id="@+id/activity_info_winter_dates"
                        style="@style/Base.TextAppearance.AppCompat.Body1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/winter_dates"
                        app:layout_constraintBottom_toBottomOf="@+id/activity_info_winter_icon"
                        app:layout_constraintEnd_toEndOf="@id/activity_info_winter_title"
                        app:layout_constraintStart_toEndOf="@id/activity_info_winter_icon"
                        app:layout_constraintTop_toBottomOf="@id/activity_info_winter_title" />

                    <TextView
                        android:id="@+id/activity_info_winter_hours"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/source_code_pro_regular"
                        android:text="@string/winter_schedule"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/activity_info_winter_icon" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>