<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_coordinator_layout"
    android:background="@drawable/skyline"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAbout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="cardApp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activity_info_summer_icon"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_width="64dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_launcher"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_info_summer_title"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/app_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_info_summer_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/application_url"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_info_summer_icon"
                        app:layout_constraintTop_toBottomOf="@+id/activity_info_summer_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="cardDeveloper"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activity_about_developer_icon"
                        android:src="@drawable/ic_build_black_24dp"
                        android:tint="@color/pharmacy_green"
                        android:contentDescription="@string/app_name"
                        android:layout_marginEnd="10dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_width="64dp"
                        android:layout_height="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_about_developer_title"
                        android:text="@string/Developed_by"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_about_developer_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:text="@string/aspectsense_url"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_about_developer_icon"
                        app:layout_constraintTop_toBottomOf="@+id/activity_about_developer_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="cardVersion"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activity_about_version_icon"
                        android:src="@drawable/ic_code_black_24dp"
                        android:tint="@color/pharmacy_green"
                        android:contentDescription="@string/app_name"
                        android:layout_marginEnd="10dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_width="64dp"
                        android:layout_height="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_about_version_title"
                        android:text="@string/Open_Source_Software"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_about_version_icon"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/activity_about_version_details"
                        android:text="@string/Open_Source_Software"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_about_version_icon"
                        app:layout_constraintTop_toBottomOf="@+id/activity_about_version_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="cardRate"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activity_about_rate_icon"
                        android:src="@drawable/ic_favorite_black_24dp"
                        android:tint="@color/pharmacy_green"
                        android:contentDescription="@string/app_name"
                        android:layout_marginEnd="10dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_width="64dp"
                        android:layout_height="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_about_rate_title"
                        android:text="@string/Loved_the_app"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_about_rate_icon"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:text="@string/Click_to_rate"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_about_rate_icon"
                        app:layout_constraintTop_toBottomOf="@+id/activity_about_rate_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="cardShare"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/activity_about_share_icon"
                        android:src="@drawable/ic_share_black_24dp"
                        android:tint="@color/pharmacy_green"
                        android:contentDescription="@string/app_name"
                        android:layout_marginEnd="10dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:layout_width="64dp"
                        android:layout_height="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/activity_about_share_title"
                        android:text="@string/Tell_the_world"
                        style="@style/Base.TextAppearance.AppCompat.Title"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_about_share_icon"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:text="@string/Share_with_your_friends"
                        style="@style/Base.TextAppearance.AppCompat.Small"
                        android:layout_marginStart="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/activity_about_share_icon"
                        app:layout_constraintTop_toBottomOf="@+id/activity_about_share_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>